[package]
name = "nekoexplorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
urlencoding = "2.1"
url = "2.2"
