[package]
name = "nekoexplorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"

[[bin]]
name = "e621"
path = "api/e621.rs"
